--- a/display-a-list-of-components/src/app/app.component.html
+++ b/display-a-list-of-components/src/app/app.component.html
@@ -1,3 +1,8 @@
-<div class="container">
+<!-- <div class="container">
   <app-movie-item [movie]="movie" />
+</div> -->
+
+<div *ngFor="let movie of moviesSignal()">
+  <app-movie-item [movie]="movie"></app-movie-item>
 </div>
+
