revised version of code
revised version of code

--- a/highlight-a-specific-movie-in-the-list-on-mouse-over/src/app/app.component.html
+++ b/highlight-a-specific-movie-in-the-list-on-mouse-over/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  @for(movie of movies(); track movie.id) {
-    <app-movie-item [movie]="movie" />
-  }
+  <div appHighlight>
+    @for(movie of movies(); track movie.id) {
+      <app-movie-item [movie]="movie" />
+    }
+  </div>
 </div>
