Added the solution for Highlight a Specific Movie in the List on Mouse Over
Added the solution for Highlight a Specific Movie in the List on Mouse Over

--- a/highlight-a-specific-movie-in-the-list-on-mouse-over/solution/src/styles.scss
+++ b/highlight-a-specific-movie-in-the-list-on-mouse-over/solution/src/styles.scss
@@ -3,11 +3,6 @@
   padding: 5rem
 }
 
-//.highlight 
-// .movie-item {
-//   background-color: gold;
-// }
-
-.highlight {
+.highlight .movie-item {
   background-color: gold;
 }
